force-app/main/default/objects/ampi__xx_Good_Service__c/ampi__xx_Good_Service__c.object-meta.xml
<CustomObject>
    <description>Manage a catalog of goods and services with their expected costs, preferred procurement methods etc.</description>
    <label>Good/Service</label>
    <nameField>
        <label>Good/ Service Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Goods/Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>