force-app/main/default/objects/ampi__xx_Good_Service__c/fields/ampi__xx_Category__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Category__c</fullName>
    <description>Picklist field to categorise the product as either good or service.</description>
    <inlineHelpText>Pick whether this is a good or service.</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>