force-app/main/default/objects/ampi__xx_Good_Service__c/fields/ampi__xx_Description__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Description__c</fullName>
    <description>Text field to add the description of good or service.</description>
    <label>Description</label>
    <length>225</length>
    <type>Text</type>
</CustomField>