force-app/main/default/objects/ampi__xx_Good_Service__c/fields/ampi__xx_Expected_Cost__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Expected_Cost__c</fullName>
    <description>Currency field to store the expected unit cost of good or service.</description>
    <label>Expected Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>