force-app/main/default/objects/ampi__xx_Good_Service__c/fields/ampi__xx_Procurement_Method__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Procurement_Method__c</fullName>
    <description>Picklist field to specify the method of procurement for the good or service.</description>
    <label>Procurement Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low Value Acquisition</fullName>
            </value>
            <value>
                <fullName>Request for Proposal</fullName>
            </value>
            <value>
                <fullName>Invitation to Bids</fullName>
            </value>
            <value>
                <fullName>Request for Quotation</fullName>
            </value>
            <value>
                <fullName>Direct Contracting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>